cmake_minimum_required(VERSION 3.22)
project(CppPrimerPlus)

set(CMAKE_CXX_STANDARD 14)

add_executable(01_myfirst Chapter2/01_myfirst.cpp)
add_executable(02_carrots Chapter2/02_carrots.cpp)
add_executable(03_getinfo Chapter2/03_getinfo.cpp)
add_executable(04_sqrt Chapter2/04_sqrt.cpp)
add_executable(05_ourfunc Chapter2/05_ourfunc.cpp)
add_executable(06_convert Chapter2/06_convert.cpp)
add_executable(exercise_01 Chapter2/exercises/exercise_01.cpp)
add_executable(exercise_02 Chapter2/exercises/exercise_02.cpp)