cmake_minimum_required(VERSION 3.22)
project(CppPrimerPlus)

set(CMAKE_CXX_STANDARD 14)

add_executable(01_myfirst Chapter02/01_myfirst.cpp)
add_executable(02_carrots Chapter02/02_carrots.cpp)
add_executable(03_getinfo Chapter02/03_getinfo.cpp)
add_executable(04_sqrt Chapter02/04_sqrt.cpp)
add_executable(05_ourfunc Chapter02/05_ourfunc.cpp)
add_executable(06_convert Chapter02/06_convert.cpp)
add_executable(exercise_01 Chapter02/exercises/exercise_01.cpp)
add_executable(exercise_02 Chapter02/exercises/exercise_02.cpp)
add_executable(exercise_03 Chapter02/exercises/exercise_03.cpp)
add_executable(exercise_04 Chapter02/exercises/exercise_04.cpp)
add_executable(exercise_05 Chapter02/exercises/exercise_05.cpp)
add_executable(exercise_06 Chapter02/exercises/exercise_06.cpp)
add_executable(exercise_07 Chapter02/exercises/exercise_07.cpp)
add_executable(01_limits Chapter03/01_limits.cpp)
add_executable(02_exceed Chapter03/02_exceed.cpp)
add_executable(03_hexoct1 Chapter03/03_hexoct1.cpp)
add_executable(04_hexoct2 Chapter03/04_hexoct2.cpp)
add_executable(05_chartype Chapter03/05_chartype.cpp)
add_executable(06_morechar Chapter03/06_morechar.cpp)
add_executable(07_bondini Chapter03/07_bondini.cpp)
add_executable(08_floatnum Chapter03/08_floatnum.cpp)
add_executable(09_fltadd Chapter03/09_fltadd.cpp)
add_executable(10_arith Chapter03/10_arith.cpp)
add_executable(11_divide Chapter03/11_divide.cpp)